# aotraffic

./: .gitignore
python/aotraffic/: LICENSE  pyproject.toml
python/simulation/: opcuaserver.py
