[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aotraffic"
version = "0.1.0"
description = "An open source higher level library for invoking node commands with OPC UA"
authors = [{ name="Michael Mahoney", email="michael.mahoney@alphaomega.com.co" }]
readme = "README.md"
license = { file="LICENSE" }
dependencies = []

[project.urls]
Homepage = "https://github.com/michaelmahoney-alphaomega/aotraffic"
